# python-project-base

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mkdocs.yml  pyproject.toml  pytest-xunit.xml  pytest.ini
docs/: api.md  docs.md
src/base/: __init__.py
src/base/ya_module/: utils.py
tests/: test_base.py
tests/base/: test_base.py
tests/base/ya_module/: test_utils.py
