[tool.poetry]
name = "base"
version = "0.1.0"
description = "Base project setup"
authors = ["Andrea Riciputi <andrea.riciputi@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.2.1"
coverage = {extras = ["toml"], version = "^5.0.4"}

[tool.coverage.paths]
source = ["src",]

[tool.coverage.run]
branch = true
source = ["base"]

[tool.coverage.report]
ignore_errors = true
fail_under = 90
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

