[tool.poetry]
name = "base"
version = "0.1.0"
description = "Base project setup"
authors = ["Andrea Riciputi <andrea.riciputi@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.2.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
black = "^19.10b0"
pdocs = "^1.0.1"
mkdocs = "^1.1"
portray = "^1.3.1"
pdbpp = "^0.10.2"
pre-commit = "^2.2.0"
toml = "^0.10.0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pylint = "^2.4.4"
bandit = "^1.6.2"

[tool.pytest.ini_options]
minversion = "6.0"
junit_family = "legacy"
addopts = "--verbosity=1 --cov=base --cov-report=term-missing --cov-report=xml --junit-xml=pytest-xunit.xml"

[tool.coverage.paths]
source = ["src",]

[tool.coverage.run]
branch = true
source = ["base"]

[tool.coverage.report]
ignore_errors = true
fail_under = 90
show_missing = true

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
line_length = 88
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
known_first_party = "base"

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "indigo", accent = "indigo"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

