[tool.poetry]
name = "base"
version = "0.1.0"
description = "Base project setup"
authors = ["Andrea Riciputi <andrea.riciputi@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
# linting and formatting
black = "^22.3"
isort = "^5.10"
pylint = "^2.13"
bandit = "^1.7"
pre-commit = "^2.19"
# repl
ipython = "^8.3"
pdbpp = "^0.10.3"
# testing
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-randomly = "^3.12"
coverage = {extras = ["toml"], version = "^6.3"}
# documentation
mkdocs = "^1.3"
mkdocs-material = "^8.2"
mkdocstrings = "^0.18"
mkdocs-with-pdf = "^0.9"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--verbosity=1 --cov=base --cov-report=term-missing --cov-report=xml --junit-xml=pytest-xunit.xml"

[tool.coverage.paths]
source = ["src",]

[tool.coverage.run]
branch = true
source = ["base"]

[tool.coverage.report]
ignore_errors = true
fail_under = 90
show_missing = true

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.isort]
line_length = 99
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
known_first_party = "base"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

